# yyff.github.io

./: CNAME  Gemfile  README.md  _config.yml  about.md
.sass-cache/1c61b82f8075c24f6cebc938b3d0aec79a849217/: _animation.scssc  _appearance.scssc  _backface-visibility.scssc  _background-image.scssc  _background.scssc  _border-image.scssc  _border-radius.scssc  _box-sizing.scssc  _calc.scssc  _columns.scssc  _filter.scssc  _flex-box.scssc  _font-face.scssc  _font-feature-settings.scssc  _hidpi-media-query.scssc  _hyphens.scssc  _image-rendering.scssc  _keyframes.scssc  _linear-gradient.scssc  _perspective.scssc  _placeholder.scssc  _radial-gradient.scssc  _transform.scssc  _transition.scssc  _user-select.scssc
.sass-cache/39388d22ba2f035b130f660c39f821bf6337e02b/: _convert-units.scssc  _gradient-positions-parser.scssc  _is-num.scssc  _linear-angle-parser.scssc  _linear-gradient-parser.scssc  _linear-positions-parser.scssc  _linear-side-corner-parser.scssc  _radial-arg-parser.scssc  _radial-gradient-parser.scssc  _radial-positions-parser.scssc  _render-gradients.scssc  _shape-size-stripper.scssc  _str-to-num.scssc
.sass-cache/60aa516f57fda9b3d07dd2943a7024b01fe93d79/: _neat-helpers.scssc  _neat.scssc
.sass-cache/71334dfe34215db64d98c39b2a8c5198752b20f7/: _fill-parent.scssc  _grid.scssc  _media.scssc  _omega.scssc  _outer-container.scssc  _pad.scssc  _private.scssc  _reset.scssc  _row.scssc  _shift.scssc  _span-columns.scssc  _to-deprecate.scssc  _visual-grid.scssc
.sass-cache/784f2c10b6ed262a305577d51f131c1ffe9ec8d4/: _base.scssc  _layout.scssc  custom-styles.scssc  (+2 more)
_data/: navigation.yml
_includes/: head.html  header.html
_layouts/: home.html  post.html  tagpage.html
_posts/: 2016-10-13-implement-micro-debugger.md  2016-3-22-text-clf.md  2018-12-04-filebeat-impl.md  2019-07-04-es-script-intro.md  2019-07-05-es-script-impl.md  2019-11-25-es-apm.md  2019-12-22-ocp.md  2019-12-23-es-hadoop-impl.md  2020-06-24-es-plugin.md
_sass/: _base.scss
_site/: feed.xml  index.html  sitemap.xml
algorithm/: index.md
codes/cmake-test/: CMakeLists.txt
codes/cmake-test/include/: func.h
codes/cmake_demo/unittest/: CMakeLists.txt  test_func.cpp
language/: index.md
other/: index.md
tag/: KNN.md  NB.md  SVM.md  ocp.md  ood.md  ptrace.md
(+152 files in other folders)
